--- a/Guided_Capstone/Notebook_steptwo.ipynb
+++ b/Guided_Capstone/Notebook_steptwo.ipynb
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/owner/Documents/Springboard/Unit6/Step2'"
+       "'/Users/owner/Documents/Springboard/Capstone_Projects/Capstone_Projects/Guided_Capstone'"
       ]
      },
      "execution_count": 2,
@@ -169,11 +169,10 @@
       "text/plain": [
        "['.DS_Store',\n",
        " '.ipynb_checkpoints',\n",
-       " '1589505302_05152020_updated_ski_data_-_updated_ski_data.csv',\n",
        " 'data',\n",
        " 'figures',\n",
-       " 'GuidedCapstone_Step2HL.ipynb',\n",
        " 'models',\n",
+       " 'Notebook_stepthree.ipynb',\n",
        " 'Notebook_steptwo.ipynb',\n",
        " 'updated_ski_data.csv']"
       ]
@@ -302,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current working directory is /Users/owner/Documents/Springboard/Unit6/Step2\n"
+      "The current working directory is /Users/owner/Documents/Springboard/Capstone_Projects/Capstone_Projects/Guided_Capstone\n"
      ]
     }
    ],
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -429,11 +428,10 @@
       "text/plain": [
        "['.DS_Store',\n",
        " '.ipynb_checkpoints',\n",
-       " '1589505302_05152020_updated_ski_data_-_updated_ski_data.csv',\n",
        " 'data',\n",
        " 'figures',\n",
-       " 'GuidedCapstone_Step2HL.ipynb',\n",
        " 'models',\n",
+       " 'Notebook_stepthree.ipynb',\n",
        " 'Notebook_steptwo.ipynb',\n",
        " 'updated_ski_data.csv']"
       ]
@@ -822,8 +820,8 @@
       "text/plain": [
        "New York               33\n",
        "Michigan               29\n",
-       "Colorado               22\n",
        "Sierra Nevada          22\n",
+       "Colorado               22\n",
        "Pennsylvania           19\n",
        "Wisconsin              16\n",
        "New Hampshire          16\n",
@@ -842,22 +840,22 @@
        "Oregon                  6\n",
        "Ohio                    5\n",
        "Connecticut             5\n",
-       "Mt. Hood                4\n",
-       "Illinois                4\n",
-       "West Virginia           4\n",
        "Virginia                4\n",
-       "Alaska                  3\n",
+       "West Virginia           4\n",
+       "Illinois                4\n",
+       "Mt. Hood                4\n",
        "Iowa                    3\n",
+       "Alaska                  3\n",
        "Indiana                 2\n",
-       "South Dakota            2\n",
        "Arizona                 2\n",
-       "New Jersey              2\n",
-       "Missouri                2\n",
        "Nevada                  2\n",
+       "Missouri                2\n",
+       "New Jersey              2\n",
+       "South Dakota            2\n",
        "Northern California     1\n",
        "Rhode Island            1\n",
-       "Tennessee               1\n",
        "Maryland                1\n",
+       "Tennessee               1\n",
        "Name: Region, dtype: int64"
       ]
      },
@@ -1747,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1799,16 +1797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26523d90>]"
+       "[<matplotlib.lines.Line2D at 0x109349650>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1831,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1844,16 +1842,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a265d4e90>]"
+       "[<matplotlib.lines.Line2D at 0x1a1eef9210>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1876,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1890,16 +1888,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a266b12d0>]"
+       "[<matplotlib.lines.Line2D at 0x1a1efd8f90>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1922,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,16 +1929,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a267d5150>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f012b10>]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1963,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,16 +1971,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26893b90>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f1685d0>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2005,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,16 +2012,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26add490>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f23bf50>]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2046,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,16 +2053,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26b32690>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f316b10>]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2087,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,16 +2094,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26c564d0>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f3cbdd0>]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2128,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,16 +2135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26d81f10>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f49f050>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2169,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,16 +2177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a26eaab10>]"
+       "[<matplotlib.lines.Line2D at 0x1a1f549810>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2211,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2296,7 +2294,7 @@
        "[0 rows x 27 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2331,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2339,7 +2337,7 @@
    },
    "outputs": [],
    "source": [
-    "ski.to_csv(os.path.join(data_dir,'step2_output.csv'),sep='\\t')"
+    "ski.to_csv(os.path.join(data_dir,'step2_output.csv'),sep='\\t',index=False)"
    ]
   },
   {
